--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,17 @@
     --colorfont: #000000;
     --colortext: #283136;
     --colorbutton: #FFFFFF;
+    --colorradio: #4D4D4D;
+    --colorcardtext: #666666;
+    --colorbuttonprice: #FB565A;
+    --colorsocialicon: #E1E1E1;
     --fonttext: 'Roboto', "Arial", sans-serif;
 }
+
+
+/* главная страница */
+
+
 .page_body{
     margin: 0;
     padding: 0;
@@ -102,11 +111,87 @@ img{
 }
 
 
-
-h3{
-    font-size: 24px;
-    line-height: 30px; 
+/* страница товара */
+.inner_page .main_header{
+    background-color: var(--colorhead);
 }
-p{
+.page_title{
+    background-color: var(--colorhead);
+    font-size: 55px;
+    line-height: 55px;
+}
+
+
+/* фильтр */
+
+.filter legend{
+    font-size: 18px;
+    line-height: 30px;
+}
+.filter_option{
+    list-style: none;
+    line-height: 20px;
+}
+
+
+.filter_input:hover + label,
+.filter_input:focus + label{
+  color: var(--colorradio);
+}
+
+.filter_price{
+    list-style: none;
+    color: var(--colorfont);
+}
+.filter_price a{
+    list-style: none;
+    color: var(--colorfont);
+}
+.filter_price :hover{
+    color: var(--colorradio);
+}
+
+
+/* каталог товаров */
+
+.catalog {
+    list-style: none;
+}
+.catalog_item {
+    width: 358px;
+    height: 578px;
+    margin: 1rem;    /* временный артибут. чтоб различать списки */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.486)
+}
+.productname{
+    font-size: 18px;
+    line-height: 30px;
+    color: var(--colorfont);
+}
+.catalog_item p{
     font-size: 16px;
+    line-height: 18px;
+    color: var(--colorcardtext);
+}
+.productprice{
+    color: var(--colorbutton);
+    background-color: var(--colorbuttonprice);
+}
+.navigation_product{
+    list-style: none;
+}
+.navigation_page{
+    color: var(--colorfont);
+    background-color: var(--colorhead);
+}
+
+/* иконки соц сетей */
+.social{
+    list-style: none;
+}
+.social_icon{
+    width: 81px;
+    height: 81px;
+    border-radius: 50%;
+    background-color: var(--colorsocialicon);
 }
