--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,14 @@
     --colorbuttonprice: #FB565A;
     --colorsocialicon: #E1E1E1;
     --fonttext: 'Roboto', "Arial", sans-serif;
+    --colorshadow: rgba(0, 0, 0, 0.486);
 }
 
 
 /* главная страница */
-
+.page{
+    height: 100%;
+}
 
 .page_body{
     margin: 0;
@@ -23,6 +26,10 @@
     font-size: 16px;
     line-height: 24px;
     color: var(--colortext);
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    align-content: start;
 }
 a{
     text-decoration: none;
@@ -32,7 +39,14 @@ img{
     height: auto;
 }
 .main_header{
+    display: grid;
     background-color: var(--colorhead);
+    margin-bottom: 70px;
+    outline-offset: -5px;
+    
+}
+.main_header_logo{
+    justify-self: left;
 }
 
 
@@ -43,8 +57,18 @@ img{
     line-height: 30px;
     color: var(--colortext);
     background-color: transparent;
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    width: 1440px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+.main_header_bar{
+    background-color: var(--basic-black);
 }
 .navigation_list{
+    margin: 0;
+    padding: 0;
     background-color: var(--colorhead);
     list-style: none;
 }
@@ -62,6 +86,14 @@ img{
     color: var(--colorfont);
     list-style: none;
 }
+
+
+.container{
+    width: 1440px;
+    margin: 0 auto;
+    padding: 0 10px;
+    margin-bottom: 80px;
+}
 /* слайдер */
 .info_nerds{
     line-height: 18px;
@@ -71,7 +103,15 @@ img{
 }
 
 /* карточки */
+/* .features{
+
+} */
 .features_list{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 .features_item{
@@ -84,6 +124,9 @@ img{
 .features_item a{
     font-size: 16px;
     line-height: 18px;
+}
+.features_item p{
+    margin: 0 10px;
 }
 .button_web{
     background-color: #fb565a;
@@ -98,18 +141,42 @@ img{
     color: var(--colorbutton);
 }
 
-/* сброс стилей ul */
+/* новости */
+.article{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
+}
+.article_card{
+
+}
+.article_description{
+
+}
+.slogan_nerds{
+
+}
 .skills_list{
     list-style: none;
 }
 .firm_list{
     list-style: none;
 }
+.firm{
+    
+ /* выровнять в 1 линию */
+}
 .footer_social{
+    width: 260px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     list-style: none;
 }
-
+.main_footer{
+    justify-self: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 /* страница товара */
 .inner_page .main_header{
@@ -161,7 +228,7 @@ img{
     width: 358px;
     height: 578px;
     margin: 1rem;    /* временный артибут. чтоб различать списки */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.486)
+    box-shadow: 0 0 10px var(--colorshadow);
 }
 .productname{
     font-size: 18px;
@@ -190,6 +257,10 @@ img{
     list-style: none;
 }
 .social_icon{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-self: center;
+    
     width: 81px;
     height: 81px;
     border-radius: 50%;
